--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "project_page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Chandramani05.github.io/3dvideo",
+  "homepage": "https://chandramani05.github.io/3d-scene-generation/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
